Alterações e ajustes finais