@@ -12,46 +12,45 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class UserHandlerController {
 
     @ExceptionHandler(UsuarioJaCadastradoComEmailException.class)
     public ResponseEntity<ResponseDto> usuarioJaCadastradoExceptionHandler(UsuarioJaCadastradoComEmailException exception) {
-        ResponseDto.ErroDto  erroDto = ResponseDto.ErroDto.builder().mensagem(exception.getMessage()).build();
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(ResponseDto.comErro(List.of(erroDto)));
+        ResponseDto.ErroDto erroDto = ResponseDto.ErroDto.builder().mensagens(List.of(exception.getMessage())).build();
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(ResponseDto.comErro(erroDto));
     }
 
     @ExceptionHandler(UsuarioNaoEncontradoException.class)
     public ResponseEntity<ResponseDto> usuarioNaoEncontradoExceptionHandler(UsuarioNaoEncontradoException exception) {
-        ResponseDto.ErroDto  erroDto = ResponseDto.ErroDto.builder().mensagem(exception.getMessage()).build();
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(ResponseDto.comErro(List.of(erroDto)));
+        ResponseDto.ErroDto erroDto = ResponseDto.ErroDto.builder().mensagens(List.of(exception.getMessage())).build();
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(ResponseDto.comErro(erroDto));
     }
 
 
     @ExceptionHandler(ErroDataProviderException.class)
     public ResponseEntity<ResponseDto> erroDataProviderExceptionHandler(ErroDataProviderException exception) {
-        ResponseDto.ErroDto  erroDto = ResponseDto.ErroDto.builder().mensagem(exception.getMessage()).build();
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ResponseDto.comErro(List.of(erroDto)));
+        ResponseDto.ErroDto erroDto = ResponseDto.ErroDto.builder().mensagens(List.of(exception.getMessage())).build();
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ResponseDto.comErro(erroDto));
     }
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ResponseDto> erroGeral(Exception exception) {
-        ResponseDto.ErroDto erroDto = ResponseDto.ErroDto.builder().mensagem(exception.getMessage()).build();
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ResponseDto.comErro(List.of(erroDto)));
+        ResponseDto.ErroDto erroDto = ResponseDto.ErroDto.builder().mensagens(List.of(exception.getMessage())).build();
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(ResponseDto.comErro(erroDto));
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ResponseDto<Void>> methodArgumentNotValidExceptionHandler(MethodArgumentNotValidException exception) {
         List<FieldError> erros = exception.getFieldErrors();
-        List<ResponseDto.ErroDto> erroDtos = erros.stream()
-                .map(erro -> ResponseDto.ErroDto.builder()
-                        .mensagem(erro.getDefaultMessage())
-                        .build())
-                .collect(Collectors.toList());
+        List<String> mensagensErroDto = erros.stream()
+                .map(FieldError::getDefaultMessage)
+                .toList();
 
-        ResponseDto<Void> responseDto = ResponseDto.comErro(erroDtos);
+        ResponseDto.ErroDto erroDto = ResponseDto.ErroDto.builder().mensagens(mensagensErroDto).build();
+
+        ResponseDto<Void> responseDto = ResponseDto.comErro(erroDto);
 
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(responseDto);
     }
